--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,23 @@
 body{
     text-align: center;
-    color: dodgerblue;
-    background-color: firebrick;
+    color: rgb(10, 62, 114);
+    background-color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.post{
+    border: 1px solid rgb(167, 164, 164);
+    padding: 1em;
+    border-radius: 5px;
+    margin-top: 10em;
+    max-width: 60%;
+    margin: 10em auto
+}
+
+.post>h1{
+    padding-bottom: 15px;
+    border-bottom: 1px solid black;
+    font-size: 2.3em;
+}
+.post p{
+    font-weight: 100;
 }
